# WordAdvisorLib

./: .gitignore  CMakeLists.txt  README.md  WordAdvisor.cpp  WordAdvisorWrapper.cpp  environment.yml  test.py
.github/workflows/: build.yml
